--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,10 +14,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build LaTeX
-      uses: xu-cheng/latex-action@v2
+      uses: xu-cheng/latex-action@v3
       with:
         root_file: resume.tex
         latexmk_use_lualatex: true
+        texlive_version: 2020
 
     - name: Setup Build Folder
       run: |
